mobile line drag overflow fix

--- a/front/styles/_canvasPlayer.scss
+++ b/front/styles/_canvasPlayer.scss
@@ -4,7 +4,7 @@
     --background: black;
     display: block;
     position: relative;
-    overflow: hidden;
+    
     width: max-content;
     max-width: 100%;
     margin-bottom: 1em;
